[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 18.8947, 55.4928, 0, 0, 0, 0, -269.905, -419.567 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 2 )]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 460.871, 779.989 )
rotation = -3.14159
scale = Vector2( 2.52308, -0.891921 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -17.0181, -3.58174 )
offset = 69.1956
rotate = false
loop = false

[node name="MenuCamera" type="Camera2D" parent="Path2D/PathFollow2D"]
position = Vector2( 21.2, 58.5266 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="HUD" parent="." instance=ExtResource( 3 )]
margin_left = 625.0
margin_top = 820.0
margin_right = 625.0
margin_bottom = 820.0

[connection signal="start_zoom_out" from="." to="." method="_on_Main_start_zoom_out"]
